--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@ html, body{
    overflow-x: hidden;
  }
  body {
-   font-family: "Lato", Helvetica, Arial, sans-serif;
+   font-family: "Lato", Helvetica, Arial, sans-serif !important;
    color:#333333;
  }
  h1, h2, h3, h4, h5, h6 {
-   font-family: "Varela Round", Helvetica, Arial, sans-serif;
+   font-family: "Varela Round", Helvetica, Arial, sans-serif !important;
  }
  h2 {
    font-size:28px;
