--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html, body{
  }
  h1, h2, h3, h4, h5, h6 {
    font-family: "Varela Round", Helvetica, Arial, sans-serif !important;
+	-webkit-animation: hue 60s infinite linear;
  }
  h2 {
    font-size:28px;
